styles/globals.scss
@import url('https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,400;0,700;1,400;1,500;1,700&family=Inter:wght@400;700;800&family=Lato:wght@100;300;400;700;900&display=swap');
@import "@/styles/variable.module";

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  scroll-behavior: smooth;
}

html,
body {
  font-family: $--ff-inter;
  background-color: var($--clr-light);
  cursor: default;
}

html {
  height: 100%;
}

.active-modal{
  overflow-y: hidden;
}

a {
  color: unset;
  text-decoration: none;
}

.section__padding {
  padding: 1rem;
  scroll-margin-top: 90px;
}

.flex__center {
  display: flex;
  justify-content: center;
  align-items: center;
}

.app__page {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

.app__border-section-grey,
.app__border-section-green {
  width: 100%;
  border: 1px solid;
}

.app__border-section-grey {
  border-image: linear-gradient(to right, $--clr-grey, $--clr-light) 1;
  margin: 0 auto;
}

.app__border-section-green {
  border-image: linear-gradient(to right, $--clr-green, $--clr-light) 1;
}

.app__bg-separator {
  .app__bg-separator-img-desktop {
    display: none;
  }
  .app__bg-separator-img-mobile {
    object-position: 0 90px;
  }
}

@media screen and (min-width: 768px) {
  .app__bg-separator {
    .app__bg-separator-img-desktop {
      display: block;
      object-position: right;
    }
    .app__bg-separator-img-mobile {
      display: none;
    }
  }
}

@media screen and (min-width: 1024px) {
  .app__bg-separator {
    .app__bg-separator-img-desktop {
      object-position: top;
    }
  }
}

.app__heading-h1 {
  font-family: $--ff-cormorant;
  font-size: $--fs-h1-mobile;
  font-weight: $--fw-regular;
  background: -webkit-radial-gradient(#676767, #d3d4d4);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.app__heading-h2 {
  font-family: $--ff-cormorant;
  font-size: $--fs-h2-mobile;
  font-weight: $--fw-regular;
  background: -webkit-radial-gradient(#676767, #d3d4d4);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.app__heading-h3 {
  font-family: $--ff-cormorant;
  font-size: $--fs-h3-mobile;
  font-weight: $--fw-medium;
  color: $--clr-green;
}
.app__heading-h1-blog {
  font-weight: $--fw-bold;
  margin-bottom: 0.5rem;
}
.app__heading-h2-blog {
  font-weight: $--fw-semiBold;
  margin-bottom: 0.5rem;
}
.app__heading-h3-blog {
  margin-bottom: 1rem;
  font-weight: $--fw-semiBold;
}
.app__home {
  scroll-snap-type: y mandatory;
}

/*** modal globals ***/


.modal-overlay {
  background: rgba(49, 49, 49, 0.8);
}

.app__modal,
.modal-overlay {
  z-index: 1;
  width: 100vw;
  height: 100vh;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  position: fixed;
}

.app__modal {
  .app__modal-content {
    z-index: 2;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: $--clr-light;
    border-radius: 0.5rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: 1rem;
    max-width: 360px;
    width: 100%;
    height: auto;
    h1 {
      margin-bottom: 0.8rem;
      text-align: center;
    }
    ul {
      list-style-type: "\2192";
      list-style-position: outside;
      letter-spacing: 0.08rem;
      li {
        color: $--clr-green;
        margin-bottom: 0.3rem;
        display: flex;
        p {
          margin-bottom: 1.1rem;
          margin-left: 1rem;
          color: $--clr-black;
          margin-left: 1rem;
          &:last-child {
            margin-bottom: 0;
          }
          span {
            font-weight: $--fw-bold;
            color: $--clr-green;
            margin-left: 1rem;
          }
        }
      }
    }
    .modal-close {
      margin-top: 1rem;
      align-self: center;
    }
  }
}

@media screen and (min-width: 480px) {
  .app__modal {
    .app__modal-content {
      max-width: 470px;
      width: 100%;
    }
  }
}

@media screen and (min-width: 768px) {
  .app__modal {
    .app__modal-content {
      max-width: 690px;
      width: 100%;
    }
  }
}

@media screen and (min-width: 1024px) {
  .app__modal {
    .app__modal-content {
      max-width: 1000px;
      width: 100%;
    }
  }
}

@media screen and (min-width: 768px) {
  .app__modal {
    ul {
      li {
        font-size: 2.3rem;
      }
    }
  }
}

.app__blogPage {
  font-family: $--ff-lato;
  display: flex;
  flex-direction: column;
  margin: 0 auto;
  max-width: 1000px;
  width: 100%;
}

.custom__button {
  background: #0f8a70;
  color: $--clr-light;
  font-family: var(--font-base);
  font-weight: 700;
  letter-spacing: 0.04em;
  line-height: 28px;
  font-size: 16px;
  width: 100%;
  padding: 0.5rem 2rem;
  border-radius: 1px;
  border-radius: 0.5rem;
  border: none;
  outline: none;
  cursor: pointer;
}

@media screen and (min-width: 500px) {
  .custom__button {
    width: 220px;
  }
}

@mixin gradient($color_first, $color_second) {
  background: -webkit-radial-gradient($color_first, $color_second);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.p__cormorant {
  font-family: $--ff-cormorant;
  color: $--clr-grey;
  font-weight: $--fw-semiBold;
  letter-spacing: 0.04em;
  font-size: $--fs-body-mobile;
}

.p__lato {
  font-family: $--ff-lato;
  font-weight: $--fw-light;
  font-size: $--fs-body-mobile;
}

.p__inter {
  font-family: $--ff-inter;
  font-weight: $--fw-regular;
  text-transform: capitalize;
  line-height: 28px;
  font-size: 16px;
}

@media screen and (min-width: 768px) {
  .app__heading-h1 {
    font-size: $--fs-h1;
  }

  .app__heading-h2 {
    font-size: $--fs-h2;
  }

  .app__heading-h3 {
    font-size: $--fs-h3;
  }
  .p__cormorant {
    font-size: $--fs-body;
  }
  .p__lato {
    font-size: $--fs-body;
  }
}

.app__react-icons {
  font-size: 2rem;
  color: $--clr-green;
}

@media screen and (min-width: 768px) {
  .section__padding {
    padding: 2rem 2rem;
  }
}

@media screen and (min-width: 1024px) {
  .section__padding {
    padding: 3rem 6rem;
  }
}

.slide-in-top {
  -webkit-animation: slide-in-top 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
  animation: slide-in-top 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
}

@-webkit-keyframes slide-in-top {
  0% {
    -webkit-transform: translateY(-90px);
    transform: translateY(-90px);
    opacity: 0;
  }
  100% {
    -webkit-transform: translateY(0);
    transform: translateY(0);
    opacity: 1;
  }
}
@keyframes slide-in-top {
  0% {
    -webkit-transform: translateY(-90px);
    transform: translateY(-90px);
    opacity: 0;
  }
  100% {
    -webkit-transform: translateY(0);
    transform: translateY(0);
    opacity: 1;
  }
}

